Make `partitionValues` serializable for `IcebergSplit`
Also removed the `partitionDataJson` from `IcebergSplit` since it is
can be replaced by the new added `partitionValues`.

(cherry picked from commit 830084850a016429ca5c4585cd2101b7925f8a30)
(cherry picked from commit 470d1d4453ac1308e0179af08ac04a1621d6412d)